--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./src/assets/icons/profialogo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Profia Institute of Technologies">
-    <title>Profia Institute</title>
+    <title>Cape Chestnut School</title>
   </head>
   <body>
     <div id="app"></div>
