--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" href="./src/assets/icons/profialogo.jpg" />
+    <link rel="icon" href="./src/assets/icons/cape chestnut.jpg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Profia Institute of Technologies">
     <title>Cape Chestnut School</title>
